...

    return Column(
      children: [
        TextFormField(
          onChanged: (value) => totalBill.value = Decimal.parse(value),
          decoration: const InputDecoration(
            labelText: "How much do you want to split?",
          ),
        ),
        ElevatedButton(
          onPressed: () => ref.read(participantsContributionControllerProvider.notifier).splitTheBill(totalBill.value),
          child: const Text('Calculate...'),
        ),
...
