...

  const CalculateButton({super.key, required this.onPress});

  @override
  Widget build(BuildContext context) {
    return ElevatedButton(
      key: const Key("btnCalculate"),
      onPressed: onPress,
      child: const Text('Calcular...'),
    );
  }
}

